--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "mysql2": "^2.0.1",
     "redis": "^2.8.0",
     "sequelize": "^5.21.2",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "xss": "^1.0.6"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
